# pauskollen

./: LICENSE  README.md  pyproject.toml  se.danielnylander.pauskollen.desktop
.tx/: config
po/: pauskollen.pot  sv.mo  sv.po
src/pauskollen/: __init__.py  main.py
